Fix Title and Filename

--- a/_posts/2015-04-30-チームラボ-高須正和さんに講演をしていただきました！.md
+++ b/_posts/2015-04-30-チームラボ-高須正和さんに講演をしていただきました！.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2015.04.30 チームラボ 高須正和さんに講演をしていただきました！
+title: チームラボ 高須正和さんに講演をしていただきました！
 id: 1173
 comment: false
 categories:
