--- a/_posts/2016-03-26-秋山さん、金井さん、山中さんの卒業式を行いました.md
+++ b/_posts/2016-03-26-秋山さん、金井さん、山中さんの卒業式を行いました.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2016.03.26 秋山さん、金井さん、山中さんの卒業式を行いました
+title: 秋山さん、金井さん、山中さんの卒業式を行いました
 id: 1754
 comment: false
 categories:
