--- a/_posts/2016-10-24-質感制御のための3Dプリント手法が「トレたま」にて紹介されました.md
+++ b/_posts/2016-10-24-質感制御のための3Dプリント手法が「トレたま」にて紹介されました.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2016.10.24 質感制御のための3Dプリント手法が「トレたま」にて紹介されました
+title: 質感制御のための3Dプリント手法が「トレたま」にて紹介されました
 id: 2206
 comment: false
 categories:
