--- a/_posts/2017-03-02-インタラクション2017にて発表を行いました．.md
+++ b/_posts/2017-03-02-インタラクション2017にて発表を行いました．.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2017.03.02-04 インタラクション2017にて発表を行いました．
+title: インタラクション2017にて発表を行いました．
 id: 2753
 comment: false
 categories:
