--- a/_posts/2017-03-06-第172回HCI研究会にて発表を行いました．.md
+++ b/_posts/2017-03-06-第172回HCI研究会にて発表を行いました．.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2017.03.06-07 第172回HCI研究会にて発表を行いました．
+title: 第172回HCI研究会にて発表を行いました．
 id: 2728
 comment: false
 categories:
