--- a/_posts/2015-04-26-TBSテレビ「別冊アサ（秘）ジャーナル」に宮下研が放映されます.md
+++ b/_posts/2015-04-26-TBSテレビ「別冊アサ（秘）ジャーナル」に宮下研が放映されます.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2015.04.26  ＴＢＳテレビ「別冊アサ（秘）ジャーナル」に宮下研が放映されます
+title: ＴＢＳテレビ「別冊アサ（秘）ジャーナル」に宮下研が放映されます
 id: 664
 comment: false
 categories:
