--- a/_posts/2015-06-06-第-1-回デザインパターン勉強会を開催しました！.md
+++ b/_posts/2015-06-06-第-1-回デザインパターン勉強会を開催しました！.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2015.06.06 第 1 回デザインパターン勉強会を開催しました！
+title: 第 1 回デザインパターン勉強会を開催しました！
 id: 1178
 comment: false
 categories:
