--- a/_posts/2015-10-16-D1-加藤邦拓君が日本学術振興会特別研究員DC2に採用内定.md
+++ b/_posts/2015-10-16-D1-加藤邦拓君が日本学術振興会特別研究員DC2に採用内定.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2015.10.16 D1 加藤邦拓君が日本学術振興会特別研究員DC2に採用内定
+title: D1 加藤邦拓君が日本学術振興会特別研究員DC2に採用内定
 id: 1322
 comment: false
 categories:
