--- a/_posts/2015-4-9-著書「コンテンツは民主化をめざす―表現のためのメディア技術-」出版.md
+++ b/_posts/2015-4-9-著書「コンテンツは民主化をめざす―表現のためのメディア技術-」出版.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2015.4.9 著書「コンテンツは民主化をめざす―表現のためのメディア技術 」出版
+title: 著書「コンテンツは民主化をめざす―表現のためのメディア技術 」出版
 id: 626
 comment: false
 categories:
