--- a/_posts/2017-02-15-土井麻由佳さんによる箏演奏学習支援システムが「トレたま」にて放映されました.md
+++ b/_posts/2017-02-15-土井麻由佳さんによる箏演奏学習支援システムが「トレたま」にて放映されました.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2017.02.15. 土井麻由佳さんによる箏演奏学習支援システムが「トレたま」にて放映されました
+title:  土井麻由佳さんによる箏演奏学習支援システムが「トレたま」にて放映されました
 id: 2712
 comment: false
 categories:
