--- a/_posts/2017-05-08-2016年度卒業式・学位授与式が行われました.md
+++ b/_posts/2017-05-08-2016年度卒業式・学位授与式が行われました.md
@@ -2,7 +2,7 @@
 layout: post
 categories: 2017年
 date: '2017-03-26'
-published: false
+published: true
 title: 2016年度卒業式・学位授与式が行われました
 ---
 3月26日に明治大学卒業式が行われ，今年は総合数理学部先端メディアサイエンス学科の1期生11名と新領域創造専攻から1名が卒業しました．
