--- a/_posts/2017-04-17-新メンバーの歓迎会を行いました.md
+++ b/_posts/2017-04-17-新メンバーの歓迎会を行いました.md
@@ -2,7 +2,7 @@
 layout: post
 categories: 2017年
 date: '2017-04-17'
-published: false
+published: true
 title: 新メンバーの歓迎会を行いました
 ---
 4/17(月)のお昼に、研究室で新メンバーの歓迎会を行いました。おいしいピザを囲んで、話も弾みました。
