--- a/_posts/2017-05-22-chi2017にて発表を行いました！.md
+++ b/_posts/2017-05-22-chi2017にて発表を行いました！.md
@@ -1,10 +1,8 @@
 ---
 layout: post
-published: true
+published: false
 categories: 2017年
 date: '2017-05-12 12:00 +0900'
 title: CHI2017にて発表を行いました！
 ---
-## A New Post
-
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+test
