--- a/_posts/2017-05-22-chi2017にて発表を行いました！.md
+++ b/_posts/2017-05-22-chi2017にて発表を行いました！.md
@@ -3,6 +3,16 @@ layout: post
 published: false
 categories: 2017年
 date: '2017-05-12 12:00 +0900'
-title: CHI2017にて発表を行いました！
+title: CHI2017に参加しました
 ---
-test
+アメリカコロラド州デンバーで開催されたCHI2017に参加しました．
+
+宮下研からは，研究員（現Yahoo!JAPAN研究所）山中さんとD3高橋さんが登壇発表を行いました．
+また，高橋さんはコロラド大学ボルダー校との共同研究も発表しました．
+
+多くの議論をしていただき，ありがとうございました！
+!
+
+[]({{site.baseurl}}/https://lh3.googleusercontent.com/Kl12sUvVYebvpA9c3vJv62XQkw4I1LYhs5unfyvN8NnXyY8gfbcTiLe0l5UFmfn2jlesqtL4h4OhqYsl7f4FZX0mh4T8gW6ZxnwQWBLgxLvENcScFQm0T-3AEWKxmq6jPH9oq0YHgh3VAaNKbXAxo0JzdsYDpRKmujRPwSHcMQCvrsOWzespq4ECF8pFe55afif5L-a7KS2k9vs-_RZ0ADknDMpZ0qMJvJ9UkILsqXLr4ygV18Uz9Y0_harLFTHnEU2EzVjxOlHaL3_dVe2lNumpJEI6ynnyyR5R9YtlzDfGzi04UobYwgKYyasZAr4xs_yDnfITs6dmeI9EyhpLJU9Bt2boxlmTXEUqEGay224DplrbHDnQRnjGQgIpJma9V8WB8jg1EejwD9Qw52-KHd3ITGArqyQR1LoBSCXAzr6JnIaOY4ru1twwOxB-VPpQpCc84-QuwZvh2KsvYKnpWrQmjEnXAPrsVCusUjeS0ye5lNPSI99QTnkoNxREoN48vYptouKxEJuuoyxlbnX2yGwkmUhvIPxXszkGVslevfukAoxD8HDitgrPLS2IXm-Kr6rWkYiTc6t5l-vS67NtXrMep_AdI7z7frRFk4UVGmN1WY8HchdXIVw8I-VTSK_au6ILY1bhiAjGRKwKVJCd9THhKjfZrNxJ9v3T20YAXgI=w897-h673-no)
+
+
