--- a/_posts/2017-05-22-chi2017にて発表を行いました！.md
+++ b/_posts/2017-05-22-chi2017にて発表を行いました！.md
@@ -11,8 +11,7 @@ title: CHI2017に参加しました
 また，高橋さんはコロラド大学ボルダー校との共同研究も発表しました．
 
 多くの議論をしていただき，ありがとうございました！
-!
 
-[]({{site.baseurl}}/https://lh3.googleusercontent.com/Kl12sUvVYebvpA9c3vJv62XQkw4I1LYhs5unfyvN8NnXyY8gfbcTiLe0l5UFmfn2jlesqtL4h4OhqYsl7f4FZX0mh4T8gW6ZxnwQWBLgxLvENcScFQm0T-3AEWKxmq6jPH9oq0YHgh3VAaNKbXAxo0JzdsYDpRKmujRPwSHcMQCvrsOWzespq4ECF8pFe55afif5L-a7KS2k9vs-_RZ0ADknDMpZ0qMJvJ9UkILsqXLr4ygV18Uz9Y0_harLFTHnEU2EzVjxOlHaL3_dVe2lNumpJEI6ynnyyR5R9YtlzDfGzi04UobYwgKYyasZAr4xs_yDnfITs6dmeI9EyhpLJU9Bt2boxlmTXEUqEGay224DplrbHDnQRnjGQgIpJma9V8WB8jg1EejwD9Qw52-KHd3ITGArqyQR1LoBSCXAzr6JnIaOY4ru1twwOxB-VPpQpCc84-QuwZvh2KsvYKnpWrQmjEnXAPrsVCusUjeS0ye5lNPSI99QTnkoNxREoN48vYptouKxEJuuoyxlbnX2yGwkmUhvIPxXszkGVslevfukAoxD8HDitgrPLS2IXm-Kr6rWkYiTc6t5l-vS67NtXrMep_AdI7z7frRFk4UVGmN1WY8HchdXIVw8I-VTSK_au6ILY1bhiAjGRKwKVJCd9THhKjfZrNxJ9v3T20YAXgI=w897-h673-no)
+![]({{site.baseurl}}/https://lh3.googleusercontent.com/Kl12sUvVYebvpA9c3vJv62XQkw4I1LYhs5unfyvN8NnXyY8gfbcTiLe0l5UFmfn2jlesqtL4h4OhqYsl7f4FZX0mh4T8gW6ZxnwQWBLgxLvENcScFQm0T-3AEWKxmq6jPH9oq0YHgh3VAaNKbXAxo0JzdsYDpRKmujRPwSHcMQCvrsOWzespq4ECF8pFe55afif5L-a7KS2k9vs-_RZ0ADknDMpZ0qMJvJ9UkILsqXLr4ygV18Uz9Y0_harLFTHnEU2EzVjxOlHaL3_dVe2lNumpJEI6ynnyyR5R9YtlzDfGzi04UobYwgKYyasZAr4xs_yDnfITs6dmeI9EyhpLJU9Bt2boxlmTXEUqEGay224DplrbHDnQRnjGQgIpJma9V8WB8jg1EejwD9Qw52-KHd3ITGArqyQR1LoBSCXAzr6JnIaOY4ru1twwOxB-VPpQpCc84-QuwZvh2KsvYKnpWrQmjEnXAPrsVCusUjeS0ye5lNPSI99QTnkoNxREoN48vYptouKxEJuuoyxlbnX2yGwkmUhvIPxXszkGVslevfukAoxD8HDitgrPLS2IXm-Kr6rWkYiTc6t5l-vS67NtXrMep_AdI7z7frRFk4UVGmN1WY8HchdXIVw8I-VTSK_au6ILY1bhiAjGRKwKVJCd9THhKjfZrNxJ9v3T20YAXgI=w897-h673-no)
 
 
