--- a/_posts/2017-05-22-chi2017にて発表を行いました！.md
+++ b/_posts/2017-05-22-chi2017にて発表を行いました！.md
@@ -3,7 +3,7 @@ layout: post
 published: true
 categories: 2017年
 date: '2017-05-12 12:00 +0900'
-title: CHI2017に参加しました
+title: CHI2017に参加しました！
 ---
 アメリカコロラド州デンバーで開催されたCHI2017に参加しました．
 
